# tests

./: pyproject.toml
e2e-explorer/: .gitignore  README.md  biome.json  package.json  playwright.config.ts  tsconfig.json
e2e-explorer/tests/: explorer-address.spec.ts  utils.ts
performance-explorer/: .gitignore  README.md  arkiv-client.ts  continuous-mutations.ts  index.ts  package.json  setup-entities.ts
scripts/: README.md
stress-explorer/: .env.example  config.py  locustfile.py
stress-l3/: .env-public  config.py  entity_count_updater.py  json_rpc_user.py  locustfile.py  locustfile_raw_rpc_json.py  metrics.py  pyproject.toml  testnet_balance_checker.py  testnet_topup.py  utils.py
stress-l3/master/: README.md  locust-arkiv.service.template  master-env.sh  setup-master-locust.sh
stress-l3/worker/: install-poetry.sh  locust.service.template  promtail-config.yml  setup-locust.sh
stress-tests/: .env-public  .env.example  .gitignore  pyproject.toml  tx_count.py
stress-tests/master/: locust-arkiv.service.template  master-env.sh  setup-master-locust.sh  start-master-locust.sh
stress-tests/stress/explorer/: .gitignore  locustfile.py
stress-tests/stress/l3/: dc_read_and_write.py  dc_read_only.py  dc_write_and_update.py  dc_write_only.py  locustfile.py  locustfile_raw_rpc_json.py  sample_sys_x5.payload
stress-tests/stress/tools/: base_user.py  config.py  dc_data.py  entity_count_updater.py  json_rpc_user.py  metrics.py  (+3 more)
stress-tests/worker/: install-poetry.sh  install-promtail.sh  locust.service.template  promtail.service  setup-locust.sh  setup-promtail.sh
