[project]
name = "arkiv-tests"
version = "0.2.0"
description = "Stress test for Arkiv L3"
authors = [
    {name = "Arkiv",email = "arkiv@arkiv.network"}
]
readme = "README.md"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

arkiv-sdk = "==1.0.0b1"
environs = "^14.2"
golem-base-sdk = ">=0.0.7,<0.0.8"
locust = "^2.43.1"
prometheus-client = "^0.22.1"
testcontainers = "^4.12"

[tool.poetry.group.dev.dependencies]
ruff = {version = "^0.14.6"}

[tool.locust]
host = "http://localhost:8545"
users = 5

